# photomanager

./: .gitignore  Cargo.toml  README.md  build.rs
migrations/: 20230226165852_photos.sql
src/: cli.rs  index.rs  main.rs  model.rs
