[package]
name = "photomanager"
authors = ["Jacob Schwarz <jacob.schwarz@gmx.de>"]
version = "0.0.1-SNAPSHOT"
edition = "2021"
description = "Creates a libary for photos in order to manage them without overhead."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive", "cargo"] }
log = "0.4.17"
rusqlite = "0.28.0"
sha256 = "1.1.2"
simple_logger = "4.0.0"
