[package]
name = "photomanager"
authors = ["Jacob Schwarz <jacob.schwarz@gmx.de>"]
version = "0.0.1-SNAPSHOT"
edition = "2021"
description = "Creates a libary for photos in order to manage them without overhead."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
axum = "0.6.10"
clap = { version = "4.1.6", features = ["derive", "cargo"] }
hyper = { version = "0.14.24", features = ["full"] }
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sha256 = "1.1.2"
simple_logger = "4.0.0"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.25.0", features = ["full"] }
tower = "0.4.13"
